tests/fixtures/LatestTests/VariableDeclarationTests/errors/scope_reassignment_to_local_outside.fg
/; EXPECT_ERROR: VariableNotFound
{
  var x:int = 100
}
x <- 200

